# ppmidb

./: .gitignore  README.md  TODO  notes.md  pyproject.toml
archive/: investigations.sql
misc/: _load.sql  _load_overlays.sql  code_list_overlay.csv  data_dict_views.sql  data_dictionary_overlay.csv  overlays.sql  ppmi_bridge.sql  table_pag_names_v.sql  utils.sql
misc/ppmi_bridge/: demographics.sql  participant_status.sql  pd_diagnosis_history.sql
src/ppmidb/: __init__.py  cli.py  utils.py
src/ppmidb/schema_inference/: cli.py  infer_schema.py  utils.py
