[project]
name = "ppmidb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Reece Hart", email = "rhart@bridgeanalytics.org" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "coloredlogs>=15.0.1",
    "duckdb>=1.3.1",
    "ipython>=9.3.0",
    "polars>=1.31.0",
]

[project.scripts]
ppmidb-infer-schema = "ppmidb.schema_inference.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
